Transferred from the Adobe Open Source Subversion Repository
Revision: 21
Author:   gosmith@adobe.com
Date:     2007-12-18T01:24:29.917507Z

Log Message: 
-----------
Fixed build scripts again for building the open-source subset, after newer versions came over from Perforce.

The changes are:
1. Don't build license.jar, swfkit.jar, or graphics.swc.
2. No code-signing of RSLs; no rootcert.der in zipped SDK.
3. No playerglobal.abc or global.abc in utilities.swc.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247510 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -16,7 +16,7 @@
 	<property name="sdk.dir" value="${basedir}/.."/>
 	<property name="jvm.args" value="-Dassert -ea -DAS3 -DAVMPLUS -Xms32m -Xmx384m -Dsun.io.useCanonCaches=false"/>
 
-	<target name="main" depends="clean,prepare,framework,rpc,airframework,flex,utilities,graphics,haloclassic,flash_integration" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,framework,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
 
     <target name="airframework" description="Clean build of airframework.swc">
 		<ant dir="projects/airframework"/>
@@ -28,10 +28,6 @@
 
     <target name="framework" description="Clean build of framework.swc and its resource bundles">
 		<ant dir="projects/framework"/>
-    </target>
-
-    <target name="graphics" description="Clean build of graphics.swc">
-		<ant dir="projects/graphics"/>
     </target>
 
     <target name="haloclassic" description="Clean build of haloclassic.swc">
@@ -69,7 +65,6 @@
 		<ant dir="projects/airframework" target="clean"/>
 		<ant dir="projects/flex" target="clean"/>
 		<ant dir="projects/utilities" target="clean"/>
-		<ant dir="projects/graphics" target="clean"/>
 		<ant dir="projects/haloclassic" target="clean"/>
 		<ant dir="projects/flash-integration" target="clean"/>
 		<ant dir="projects/rpc" target="clean"/>
@@ -103,7 +98,6 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="projects/airframework" target="compile"/>
 		<ant dir="projects/flex" target="compile"/>
 		<ant dir="projects/utilities" target="compile"/>
-		<ant dir="projects/graphics" target="compile"/>
 		<ant dir="projects/haloclassic" target="compile"/>
 	</target>
 
