Transferred from the Adobe Open Source Subversion Repository
Revision: 945
Author:   gosmith@adobe.com
Date:     2008-03-26T23:37:01.302214Z

Log Message: 
-----------
Added runtime resources for 13 additional locales.

The additional locales were provided by the LCDS team. The 15 locales that we now have are:

da_DK: Danish / Denmark
de_DE: German / Germany
en_US: English / United States
es_ES: Spanish / Spain
fi_FI: Finnish / Finland
fr_FR: French / France
it_IT: Italian / Italy
ja_JP: Japanese / Japan
ko_KR: Korean / South Korea
nb_NO: Norwegian Bokmal / Norway
nl_NL: Dutch / Netherlands
pt_BR: Portuguese / Brazil
sv_SE: Swedish / Sweden
zh_CN: Simplified Chinese / China
zh_TW: Traditional Chinese / Taiwan

The LCDS team localized framework.swc and rpc.swc, but not airframework.swc. For the time being, there is a placeholder aircontrols.properties file for each additional locale, but it is a copy of the en_US one.

Various Ant scripts, including the top-level one, now have an "other.locales" target which builds the new locales; the "main" target still builds only en_US and ja_JP.

The new locales have not yet been tested by the Flex team and are not yet packaged into any ZIP deliverables.

The setup.sh script now sets -XX:MaxPermSize=384m in ANT_OPTS as well as -Xmx384m, in order to avoid a PermGen type of OutOfMemoryError when building the "other.locales" target.

Modified Paths:
--------------
253 paths were modified

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247514 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -101,10 +101,10 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="projects/haloclassic" target="compile"/>
 	</target>
 
-	<target name="bundles" description ="Builds all resource bundles">
-		<ant dir="projects/framework" target="bundles"/>
-		<ant dir="projects/airframework" target="bundles"/>
-		<ant dir="projects/rpc" target="bundles"/>
+	<target name="other.locales" description ="Builds resource SWCs for other locales">
+		<ant dir="projects/framework" target="other.locales"/>
+		<ant dir="projects/airframework" target="other.locales"/>
+		<ant dir="projects/rpc" target="other.locales"/>
 	</target>
 
     <!--
