Transferred from the Adobe Open Source Subversion Repository
Revision: 2163
Author:   jspiro@adobe.com
Date:     2008-06-20T18:27:11.420943Z

Log Message: 
-----------
admin: updating ant clean to remove SDK license.pdf, and svn:ignore to ignore cruft.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="dir" action="M">/flex/sdk/trunk/lib</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247516 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -49,6 +49,7 @@
 
 	<target name="clean" description="Cleans all SWCs and their resource bundles">
 		<!-- Delete AIR files from 'prepare' target -->
+		<delete file="${FLEX_HOME}/SDK license.pdf"/> <!-- from AIR Integration Kit -->
 		<delete file="${FLEX_HOME}/bin/adl"/>
 		<delete file="${FLEX_HOME}/bin/adl.exe"/>
 		<delete file="${FLEX_HOME}/bin/adt"/>
