--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,framework,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,framework,flex4,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
 
     <target name="airframework" description="Clean build of airframework.swc">
 		<ant dir="${basedir}/projects/airframework"/>
@@ -33,6 +33,10 @@
 
     <target name="haloclassic" description="Clean build of haloclassic.swc">
 		<ant dir="${basedir}/projects/haloclassic"/>
+    </target>
+     
+     <target name="flex4" description="Clean build of flex4.swc">
+		<ant dir="${basedir}/projects/flex4"/>
     </target>
 
 	<target name="flash_integration" description="Clean build of FlexComponentBase.swc">
@@ -66,10 +70,13 @@
 		<ant dir="${basedir}/projects/framework" target="clean"/>
 		<ant dir="${basedir}/projects/airframework" target="clean"/>
 		<ant dir="${basedir}/projects/flex" target="clean"/>
+		<ant dir="${basedir}/projects/flex4" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
 		<ant dir="${basedir}/projects/flash-integration" target="clean"/>
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
+		<ant dir="${basedir}/projects/utilities" target="clean"/>	
+		<delete dir="${basedir}/libs/generated"/>
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/libs/air"/>
 		<delete dir="${basedir}/locale"/>
@@ -101,7 +108,9 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/flex" target="compile"/>
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
 		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
-	</target>
+		<ant dir="${basedir}/projects/flex4" target="compile"/>
+	
+    </target>
 
 	<target name="other.locales" description ="Builds resource SWCs for other locales">
 		<ant dir="${basedir}/projects/framework" target="other.locales"/>
