Transferred from the Adobe Open Source Subversion Repository
Revision: 3316
Author:   cframpto@adobe.com
Date:     2008-09-23T18:55:06.995321Z

Log Message: 
-----------
Switch html wrappers over to using swfobject.  There is only one copy of the template file index.template.html and swfobject.js in templates\swfobject.  For now, until I9 when we get sync'ed with FlexBuilder, the build will generate each flavor of the template and deposit them in the usual directory structure, client-side-detection, express-installation, no-player-detection, and *-with-history directories, as expected by FlexBuilder.  The old tokens which FlexBuilder and the html-wrapper task use to substitute values are still being used.

QA:  Steve Erat has a matrix of browsers and configurations which he has already tested.  A few problems were found with browser history management which did not have anything to do with this change.

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="D">/flex/sdk/trunk/templates/no-player-detection/AC_OETags.js</path>
<path kind="dir" action="M">/flex/sdk/trunk/templates/no-player-detection</path>
<path kind="file" action="D">/flex/sdk/trunk/templates/express-installation-with-history/playerProductInstall.swf</path>
<path kind="file" action="D">/flex/sdk/trunk/frameworks/javascript/FABridge/samples/srcview/swfobject.js</path>
<path kind="file" action="D">/flex/sdk/trunk/templates/express-installation-with-history/index.template.html</path>
<path kind="dir" action="M">/flex/sdk/trunk/templates/client-side-detection-with-history</path>
<path kind="file" action="D">/flex/sdk/trunk/templates/client-side-detection-with-history/AC_OETags.js</path>
<path kind="dir" action="D">/flex/sdk/trunk/templates/client-side-detection-with-history/history</path>
<path kind="dir" action="M">/flex/sdk/trunk/templates/express-installation</path>
<path kind="file" action="D">/flex/sdk/trunk/templates/express

--- a/build.xml
+++ b/build.xml
@@ -77,13 +77,16 @@
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>	
 		<delete dir="${basedir}/libs/generated"/>
+		<!-- Delete generated FABridge html files -->
+		<delete file="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html"/>
+		<delete file="${basedir}/javascript/FABridge/samples/srcview/swfobject.js"/>
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/libs/air"/>
 		<delete dir="${basedir}/locale"/>
 		<delete dir="${basedir}/themes/haloclassic"/>
 	</target>
 
-	<target name="prepare" description="Prepares for building framework SWCs">
+	<target name="prepare" description="Prepares for building framework SWCs" depends="prepare-fabridge">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
@@ -101,7 +104,47 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<delete file="${FLEX_HOME}/frameworks/libs/air/airglobal.abc"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/servicemonitor.swf"/>
 	</target>
-
+	
+	<target name="prepare-fabridge" description="Generates wrapper for FABridge">
+        <copy file="${basedir}/../templates/swfobject/swfobject.js" todir="${basedir}/javascript/FABridge/samples/srcview" />
+        <copy file="${basedir}/../templates/swfobject/index.template.html" tofile="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html" />
+		<replace file="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html">
+			<replacefilter
+				token="$${expressInstallSwf}"
+				value="playerProductInstall.swf"/>
+			<replacefilter
+				token="$${useBrowserHistory}"
+				value=""/>
+			<replacefilter
+				token="$${version_major}"
+				value="${global.playerglobal.version}"/>
+			<replacefilter
+				token="$${version_minor}"
+				value="0"/>
+			<replacefilter
+				token="$${version_revision}"
+				value="0"/>
+			<replacefilter
+				token="$${title}"
+				value="SourceTree Application"/>
+			<replacefilter
+				token="$${bgcolor}"
+				value="#ffffff"/>
+			<replacefilter
+				token="$${width}"
+				value="100%"/>
+			<replacefilter
+				token="$${height}"
+				value="100%"/>
+			<replacefilter
+				token="$${swf}"
+				value="SourceTree"/>
+			<replacefilter
+				token="$${application}"
+				value="SourceTree"/>
+		</replace>
+	</target>
+	
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
