--- a/frameworks/build.xml
+++ b/frameworks/build.xml
@@ -3,7 +3,7 @@
 <!--
 
 	ADOBE SYSTEMS INCORPORATED
-	Copyright 2006-2007 Adobe Systems Incorporated
+	Copyright 2006-2009 Adobe Systems Incorporated
 	All Rights Reserved.
 
 	NOTICE: Adobe permits you to use, modify, and distribute this file
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,framework,flex4,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
 
     <target name="airframework" description="Clean build of airframework.swc">
 		<ant dir="${basedir}/projects/airframework"/>
@@ -51,6 +51,10 @@
 		<ant dir="${basedir}/projects/utilities"/>
     </target>
 
+	<target name="javascript" description="Clean build of javascript examples">
+		<ant dir="${basedir}/javascript"/>
+	</target>
+	
 	<target name="clean" description="Cleans all SWCs and their resource bundles">
 		<!-- Delete AIR files from 'prepare' target -->
 		<delete file="${FLEX_HOME}/SDK license.pdf"/> <!-- from AIR Integration Kit -->
@@ -77,16 +81,15 @@
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>	
 		<delete dir="${basedir}/libs/generated"/>
-		<!-- Delete generated FABridge html files -->
-		<delete file="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html"/>
-		<delete file="${basedir}/javascript/FABridge/samples/srcview/swfobject.js"/>
+		<!-- Delete generated FABridge files -->
+		<ant dir="${basedir}/javascript" target="clean"/>
 		<!-- Delete empty folders -->
 		<delete dir="${basedir}/libs/air"/>
 		<delete dir="${basedir}/locale"/>
 		<delete dir="${basedir}/themes/haloclassic"/>
 	</target>
 
-	<target name="prepare" description="Prepares for building framework SWCs" depends="prepare-fabridge">
+	<target name="prepare" description="Prepares for building framework SWCs">
 		<!-- Expand the Mac AIK on top of the SDK -->
         <copy file="${FLEX_HOME}/in/air/mac/AIR Integration Kit.tbz2" todir="${FLEX_HOME}"/>
 		<echo file="${FLEX_HOME}/air_unzip.sh">#!/bin/sh
@@ -104,47 +107,7 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<delete file="${FLEX_HOME}/frameworks/libs/air/airglobal.abc"/>
 		<delete file="${FLEX_HOME}/frameworks/libs/air/servicemonitor.swf"/>
 	</target>
-	
-	<target name="prepare-fabridge" description="Generates wrapper for FABridge">
-        <copy file="${basedir}/../templates/swfobject/swfobject.js" todir="${basedir}/javascript/FABridge/samples/srcview" />
-        <copy file="${basedir}/../templates/swfobject/index.template.html" tofile="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html" />
-		<replace file="${basedir}/javascript/FABridge/samples/srcview/SourceTree.html">
-			<replacefilter
-				token="$${expressInstallSwf}"
-				value="playerProductInstall.swf"/>
-			<replacefilter
-				token="$${useBrowserHistory}"
-				value=""/>
-			<replacefilter
-				token="$${version_major}"
-				value="${global.playerglobal.version}"/>
-			<replacefilter
-				token="$${version_minor}"
-				value="0"/>
-			<replacefilter
-				token="$${version_revision}"
-				value="0"/>
-			<replacefilter
-				token="$${title}"
-				value="SourceTree Application"/>
-			<replacefilter
-				token="$${bgcolor}"
-				value="#ffffff"/>
-			<replacefilter
-				token="$${width}"
-				value="100%"/>
-			<replacefilter
-				token="$${height}"
-				value="100%"/>
-			<replacefilter
-				token="$${swf}"
-				value="SourceTree"/>
-			<replacefilter
-				token="$${application}"
-				value="SourceTree"/>
-		</replace>
-	</target>
-	
+		
 	<target name="compile" description="Builds all SWCs but not their resource bundles">
 		<ant dir="${basedir}/projects/framework" target="compile"/>
 		<ant dir="${basedir}/projects/airframework" target="compile"/>
