Transferred from the Adobe Open Source Subversion Repository
Revision: 3338
Author:   jimurphy@adobe.com
Date:     2008-09-24T20:30:41.293436Z

Log Message: 
-----------
fix FLEX_HOME in the frameworks/build.xml so one could build all the frameworks directly from this directory

Modified Paths:
--------------
/flex/sdk/trunk/frameworks/build.xml

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247520 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -13,7 +13,7 @@
 
 <project name="frameworks" default="main" basedir=".">
 
-	<property name="FLEX_HOME" location="${basedir}"/>
+	<property name="FLEX_HOME" location=".."/>
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
