Transferred from the Adobe Open Source Subversion Repository
Revision: 3710
Author:   gruehle@adobe.com
Date:     2008-10-17T17:46:28.980760Z

Log Message: 
-----------
Moved the wireframe skins into a "Wireframe" theme. A subsequent checkin is required to include the theme in the SDK builds.

Spiffed up the wireframe skins a bit to make them look better.

QA: Yes, please add tests that include the wireframe theme. This theme only applies to Gumbo components.
Bugs: SDK-17342, SDK-15855

Modified Paths:
--------------
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxSpinnerSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxHSliderTrackSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxHScrollBarTrackSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/defaults.css</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/wireframe</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxScrollBarLeftButtonSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxRadioButtonSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxHSliderSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxVSliderTrackSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxVScrollBarTrackSkin.mxml</path>
<path kind="dir" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxNumericStepperSkin.mxml</path>
<path kind="file" action="A">/flex/sdk/trunk/frameworks/projects/wireframe/src/wireframe/FxDefaultItemRenderer.mxml</path>

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,utilities,haloclassic,flash_integration" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,utilities,haloclassic,wireframe,flash_integration" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
@@ -27,6 +27,7 @@
 		<ant dir="${basedir}/projects/flex" target="doc" />
 		<ant dir="${basedir}/projects/utilities" target="doc" />
 		<ant dir="${basedir}/projects/haloclassic" target="doc" />
+		<ant dir="${basedir}/projects/wireframe" target="doc" />
 		<ant dir="${basedir}/projects/flash-integration" target="doc" />
 	</target>
 
@@ -48,6 +49,10 @@
 
      <target name="flex4" description="Clean build of flex4.swc">
 		<ant dir="${basedir}/projects/flex4"/>
+    </target>
+
+    <target name="wireframe" description="Clean build of wireframe.swc">
+		<ant dir="${basedir}/projects/wireframe"/>
     </target>
 
 	<target name="flash_integration" description="Clean build of FlexComponentBase.swc">
@@ -88,6 +93,7 @@
 		<ant dir="${basedir}/projects/flex4" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
 		<ant dir="${basedir}/projects/haloclassic" target="clean"/>
+		<ant dir="${basedir}/projects/wireframe" target="clean"/>
 		<ant dir="${basedir}/projects/flash-integration" target="clean"/>
 		<ant dir="${basedir}/projects/rpc" target="clean"/>
 		<ant dir="${basedir}/projects/utilities" target="clean"/>
@@ -98,6 +104,7 @@
 		<delete dir="${basedir}/libs/air"/>
 		<delete dir="${basedir}/locale"/>
 		<delete dir="${basedir}/themes/haloclassic"/>
+		<delete dir="${basedir}/themes/Wireframe"/>
 	</target>
 
 	<target name="prepare" description="Prepares for building framework SWCs">
@@ -126,6 +133,7 @@ tar -xjf "AIR Integration Kit.tbz2" .
 		<ant dir="${basedir}/projects/utilities" target="compile"/>
 		<ant dir="${basedir}/projects/haloclassic" target="compile"/>
 		<ant dir="${basedir}/projects/flex4" target="compile"/>
+		<ant dir="${basedir}/projects/wireframe" target="compile"/>
 
     </target>
 
