Transferred from the Adobe Open Source Subversion Repository
Revision: 4356
Author:   rfrishbe@adobe.com
Date:     2008-12-18T23:50:17.435515Z

Log Message: 
-----------
UIMovieClip needs to implement IVisualElement.  These are mostly some old changes I tried to make earlier before I understood the complexities of the different sizing models in UIMC vs UIC.  However, the important thing here really isn’t that the implementation for IVisualElement on UIMC be correct—it’s that it now compiles and we can continue to support UIMC in Gumbo.  Later, I’ll be taking a look at the different sizing models, and how we should correctly deal with transformations.

As part of this change, utilities.swc will use the files located in the flash-integration project rather than a pre-compiled SWC that was checked in.

This change will allow us to strongly type addElement, getElementAt, etc... to only work on IVisualElements.  That change will be coming a little later.

QE Notes: None
Doc Notes: None
Bugs: -
Reviewer: Glenn
tests: checkintests

Modified Paths:
--------------
<path kind="file" action="M">/flex/sdk/trunk/frameworks/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/src/FlashContainerPlaceholder.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/utilities/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/build.xml</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/flash-integration/src/mx/flash/UIMovieClip.as</path>
<path kind="file" action="M">/flex/sdk/trunk/frameworks/projects/framework/src/mx/core/AdvancedLayoutFeatures.as</path>
<path kind="dir" action="D">/flex/sdk/trunk/frameworks/projects/utilities/libs</path>

git-svn-id: https://svn.apache.org/repos/asf/incubator/flex/trunk/frameworks@1247523 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -17,7 +17,7 @@
 
 	<property file="${FLEX_HOME}/build.properties"/>
 
-	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,utilities,haloclassic,wireframe,flash_integration" description="Clean build of all SWCs"/>
+	<target name="main" depends="clean,prepare,javascript,framework,flex4,rpc,airframework,flex,flash_integration,utilities,haloclassic,wireframe" description="Clean build of all SWCs"/>
 
 	<target name="doc" >
 		<ant dir="${basedir}/projects/framework" target="doc" />
